src/Pages/StyleRoot.scss
@import url('https://fonts.cdnfonts.com/css/8bit-wonder');

$pokeball-ui-radius:15vh;
$outline-color: rgb(255, 230, 0);// rgba(199, 88, 255, 0.5);
$sub-outline-color: blue; // rgb(109, 109, 109);
$inner-color: #ffffff;
$background-color: rgba(255, 244, 254, 0.612);
$shadow-color: rgba(248, 195, 255, 0.685);
$font-color: rgb(255, 255, 255);
$footer-color: rgb(186, 186, 186);


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;  
}

body {
    font-family: 'Roboto','8BIT WONDER', sans-serif;
}

// Mixins

@mixin pokeball_open_on_hover {
    &:hover {
        cursor: pointer;
    }   
}

ul {
    list-style: none;
}


.Landing_Page {
    background-image: url("./assets/wallpaper.jpeg");
    height: 100vh;
    overflow: auto;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;

    .Landing_Page_Logo {
        position: absolute;
        left: 0%;
        top: 0%;
        z-index: 2;
        width: auto;
        height: 7%;
        margin: 10px;
        padding: auto;
    }
}

.Page_Body::-webkit-scrollbar {
    width: 0.5em;
}

.Page_Body {
    position: relative;
    margin: 0px auto;
    padding: 10% 0 20% 0;
    border: 5px solid $outline-color;
    border-image-slice: 1;
    border-top: 0;
    border-bottom: 0;
    height: 100vh;
    background-color:$background-color;
    display: flex;
    justify-content: center;
    align-items: center;
    display: grid;
    grid-auto-flow: row;
    grid-gap: 1rem;
    -ms-overflow-style: none; /* for Internet Explorer, Edge */
    scrollbar-width: none; /* for Firefox */
    overflow-y: scroll; 

    .Page_Content {
        position: relative;
        border: 1px solid $outline-color;
        background-color: #ffffff;
        border-radius: 5px;
        height: 60vw; 
        width: 80vw;
        margin: 10% 0;

        .Page_Content_Top {
            position: absolute;
            margin: 5px;
            top: 0;
            left: 0;
            display: flex;
            width: 10vw;
            height: 10vw;
            z-index: 1;
            border-radius: 50%;

            p {
                display: none;
            }

            &:active {  
                p {
                    display: flex;
                    position: relative;
                    z-index: 2;
                    margin: auto 0 auto 100% ;
                    width: 100%;
                    align-items: center;
                    justify-content: center;
                    // left: 100%;
                    text-align: center;
                    font-size: large;
                    font-weight: bold;
                    // text-decoration: underline;
                    color: $outline-color;
                    text-shadow: 1px 1px 10px $sub-outline-color;
                }
            }

        .Inner_Content {
            position: absolute;
            top: 0;
            left: 0;
            display: flex;
            justify-content: space-between;
            width: 100%;
            height: 100%;
            z-index: 1;
            border: 1px solid $outline-color;
            border-radius: 50%;
            background-color: $inner-color;

        }

            &:hover {
                    cursor: pointer;
                    border: 1px solid $shadow-color;
                }   
            
            
        }

        .Page_Content_Center {
            position: absolute;
            top: 45%;
            left: 50%;
            transform: translate(-50%, -50%);
            text-align: center;
            font-family: '8BIT WONDER', sans-serif;
            font-size: small;
            color: #3e3e3e;
            border: 1px solid $outline-color;
            border-radius: 5px;
            width: 95%;
            height: 80%;
            background-position: center;
            background-size: cover;
            background-repeat: no-repeat;
            background-attachment: fixed;
            
            .Inner_Content {
                position: absolute;
                top: 0;
                left: 0;
                display: flex;
                justify-content: space-between;
                width: 100%;
                height: 100%;
                z-index: 1;
                background-color: $inner-color;
                
            }
        }

        .Page_Content_Buttons {
            position: absolute;
            bottom: 0;
            right: 0;
            margin: 10px;
            display: flex;
            justify-content: space-between;
            width: 100%;

            ul { 
                list-style-type: none;
                margin: auto;
                padding: auto;
            
                li {
                    display: inline;
                    margin: 0 5px;
                }
            }

            button {
                background-color: transparent;
                border: none;
                color: #3e3e3e;
                font-family: '8BIT WONDER', sans-serif;
                font-size: small;
                cursor: pointer;

                &:hover {
                    text-decoration: underline;
                }
            }
        }
    }

}

.Landing_Nav {
    border-radius: 100%;
    width: $pokeball-ui-radius;
    height: $pokeball-ui-radius;
    background-color: white;
    position: fixed;
    z-index: 2;
    top: 90vh;
    left: 50%;
    transform: translate(-50%, -50%);



        .Landing_Nav_Top {          // pokeball top
            background-color: red;
            width: $pokeball-ui-radius;
            height: 50%;
            border-top-left-radius: 510px;
            border-top-right-radius: 510px;
            border-bottom: 5px solid black;
            box-shadow: -15px -15px 45px 5px rgba(0,0,0,0.35);
        } 

        .Landing_Nav_Mid {          // pokeball middle
            position: absolute;
            left: 33%;
            top: 33%;
            border: 5px solid black;
            background-color: white;
            border-radius: 100%;
            width: 5vh;
            height: 5vh;
            z-index: 3;

            @include pokeball_open_on_hover;
        }


        .PokeBall_Nav {        // pokeball nav buttons
            list-style-type: none;
            margin: 0;
            padding: 0;

            .PokeBall_Nav_Button {            
                display: inline;

                button  {
                    background-color: transparent;
                    border: none;
                    color: #3e3e3e;
                    font-family: '8BIT WONDER', sans-serif;
                    font-size: small;
                    text-decoration: underline;
                    cursor: pointer;
                }
            }   
        }
        
        .pokeball_open {
            background-color: yellow;
        }

}



.Landing_Footer {
    background-color: whitesmoke;
    height: 10vh;
    width: 100vw;
    position: fixed;
    z-index: 1;
    top: 90vh;
    border-top: 3px solid $sub-outline-color;
    box-shadow: -1px -1px 45px 10px rgba(0,0,0,0.35);
    font-size: small;

    
    .Landing_Footer_Bottom {
        color: $footer-color;
        position: absolute;
        bottom: 0px;
        font-size: small;
        padding: 5px 0px;
    }
}


.invisible {
    display: none;
}


@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ 
    body {
        color:red;
    }

    .Page_Content {
        width: 100vw;
        height: 100vw;
    }
}
@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
    .Page_Content {
        width: 100vw;
        height: 100vw;
    
    }
}
@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
@media (min-width:1281px) { /* hi-res laptops and desktops */ }

